@@ -28,6 +28,10 @@ Under development
         'service_kupu_silva', respectively.
 
     Bugs fixed:
+    
+      - The zip import of assets (as opposed to the fullmedia zip import)
+        did not take into account the 'replace identical ids' option. It 
+        does now.
 
       - FSDTMLMethod and FSPageTemplate were imported directly 
         from FileSystemSite product instead of from fssite module
